fix headerSeaparator div not showing and replace mail icon

--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -31,7 +31,7 @@
   text-decoration: underline;
 }
 
-#header-separator {
+#headerSeparator {
   height: 0.25rem;
   background-color: #00C9C8;
 }
